# cheshirecat-core

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE-OF-ETHICS.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  Dockerfile:dhi  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-release.yml  pr.yml  tag.yml
cat/: __init__.py  agent.py  env.py  exceptions.py  log.py  main.py  mixins.py  rabbit_hole.py  startup.py  utils.py
cat/agents/: __init__.py  base_agent.py  form_agent.py  main_agent.py  memory_agent.py  procedures_agent.py
cat/auth/: auth_utils.py  connection.py  permissions.py
cat/convo/: __init__.py  messages.py  model_interactions.py
cat/core_plugins/: utils.py
cat/db/: crud.py  database.py  models.py
cat/factory/: agent.py  auth_handler.py  base_factory.py  chunker.py  custom_auth_handler.py  custom_embedder.py  custom_file_manager.py  custom_vector_db.py  embedder.py  file_manager.py  llm.py  vector_db.py
cat/looking_glass/: __init__.py  bill_the_lizard.py  callbacks.py  cheshire_cat.py  dormouse.py  humpty_dumpty.py  models.py  prompts.py  stray_cat.py  tweedledee.py  tweedledum.py  white_rabbit.py
cat/mad_hatter/: __init__.py  mad_hatter.py  march_hare.py  plugin.py  plugin_extractor.py  plugin_manifest.py  procedures.py  registry.py  tweedledee.py  tweedledum.py
cat/memory/: __init__.py  interactions.py  messages.py  utils.py  (+1 more)
cheshirecat/: env.py  log.py  main.py  rabbit_hole.py  startup.py  utils.py
core/: Dockerfile  pyproject.toml  requirements.txt
core/cat/: env.py  log.py  main.py  rabbit_hole.py  startup.py  utils.py  welcome.txt
core/cat/agents/: base_agent.py  main_agent.py  memory_agent.py  procedures_agent.py
core/cat/auth/: connection.py  permissions.py
core/cat/convo/: messages.py  model_interactions.py
core/cat/db/: crud.py  database.py  vector_database.py
core/cat/db/cruds/: history.py
core/cat/experimental/form/: cat_form.py
core/cat/factory/: auth_handler.py  base_factory.py  chunker.py  custom_auth_handler.py  custom_chunker.py  custom_embedder.py  custom_file_manager.py  custom_vector_db.py  embedder.py  llm.py
core/cat/looking_glass/: bill_the_lizard.py  callbacks.py  cheshire_cat.py  output_parser.py  stray_cat.py  white_rabbit.py
core/cat/mad_hatter/: mad_hatter.py  march_hare.py  plugin.py  plugin_extractor.py  registry.py  tweedledee.py  tweedledum.py
core/cat/mad_hatter/core_plugin/hooks/: factory.py  flow.py  rabbithole.py
core/cat/mad_hatter/decorators/: endpoint.py
core/cat/memory/: long_term_memory.py  utils.py  vector_memory.py  vector_memory_builder.py  vector_memory_collection.py  vector_memory_handler.py  working_memory.py
core/cat/parsers/: __init__.py  json_parser.py  power_point_parser.py  table_parser.py  youtube_parser.py
core/cat/routes/: auth_handler.py  base.py  chunker.py  embedder.py  file_manager.py  llm.py  plugins.py  rabbit_hole.py  routes_utils.py  settings.py  static.py  users.py  vector_database.py  websocket.py
core/cat/routes/admins/: auth.py  crud.py  plugins.py  utilities.py
core/cat/routes/memory/: collections.py  convo_history.py  points.py
core/cat/routes/websocket/: websocket.py
core/cat/services/: websocket_manager.py
core/tests/: conftest.py  test_cat_utils.py  utils.py
core/tests/agents/: test_agent_form.py  test_agent_memory.py  test_agent_tools.py
core/tests/looking_glass/: test_bill_the_lizard.py  test_cheshire_cat.py  test_stray_cat.py
core/tests/mad_hatter/: test_endpoints.py  test_plugin_extractor.py
core/tests/mocks/: sample.json
core/tests/mocks/mock_plugin/: mock_endpoint.py  mock_plugin_overrides.py
core/tests/routes/: test_custom_endpoints.py  test_websocket.py
core/tests/routes/admins/: test_admins_crud.py  test_admins_plugin_settings.py  test_admins_plugins_info.py  test_admins_plugins_install_uninstall.py  test_admins_utilities.py
core/tests/routes/auth/: test_env_api_key.py
core/tests/routes/chunker/: test_chunker_setting.py
core/tests/routes/memory/: test_memory_collection.py  test_memory_points.py  test_working_memory.py
core/tests/routes/plugins/: test_plugin_settings.py  test_plugin_toggle.py
core/tests/routes/rabbithole/: test_upload_docs.py
core/tests/routes/static/: test_static.py
core/tests/routes/vector_database/: test_vector_database_setting.py
data/: readme.md
docker/: entrypoint.sh
docs/: CONTRIBUTING.md  DIFFERENCES-WITH-CHESHIRECAT.md  OPTIMIZATION-REPORT.md
migrations/: env.py  manage_migrations.py  script.py.mako
tests/: conftest.py  test_agent.py  test_cat_utils.py  test_cruds.py  test_debug.py  test_env_variables.py  utils.py
(+413 files in other folders)
