[project]
name = "Cheshire-Cat"
description = "Production ready AI assistant framework"
version = "3.0.1"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Matteo Cacciola" },
    { name = "Piero Savastano" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "aiofiles",
    "APScheduler",
    "autopep8",
    "bcrypt",
    "cryptography",
    "fastapi",
    "fastapi-healthz[redis,rabbitmq]",
    "fastmcp",
    "gunicorn",
    "httpx",
    "langchain",
    "langchain-community",
    "loguru",
    "perflint",
    "pika",
    "pillow",
    "pydantic",
    "PyJWT",
    "pylint",
    "pylint-actions",
    "pytest",
    "pytest-asyncio",
    "python-multipart",
    "python-slugify",
    "pandas",
    "qdrant_client",
    "rapidfuzz",
    "redis",
    "ruff",
    "scalar-fastapi",
    "scikit-learn",
    "tomli",
    "uvicorn[standard]",
    "websockets",
]

[tool.coverage.run]
source = ["cat"]
branch = true
omit = [
    "tests/*",
]

[tool.pylint]
max-line-length = 180
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E1120",
    "E0401",
    "C0115",
    "C0116",
    "E1101",
    "R0801",
    "C0202",
    "W0406",
    "W1514",
    "W0201",
    "W0511",
    "E722",
    "F821",
    "E741",
]

[tool.pylint.main]
load-plugins = "pylint_actions, perflint"

[tool.ruff]
extend-ignore = ["E722", "F821", "E741"]
